WTF::removeQueryParameters should not reencode and reparse the query string if nothing was removed https://bugs.webkit.org/show_bug.cgi?id=247131

Reviewed by Chris Dumez.

Add a minor optimization to the `WTF::removeQueryParameters` helper function. In the case where no
query parameters were removed, we should leave that part of the query string alone, instead of
forcing both the key and value to become percent-encoded. Additionally, in the case where no query
parameters were removed altogether, we can skip setting (and re-parsing) the query string
altogether, and instead simply return without modifying the given URL.

* Source/WTF/wtf/URL.cpp:
(WTF::removeQueryParameters):
* Source/WTF/wtf/URLParser.cpp:
(WTF::URLParser::parseURLEncodedForm):
(WTF::URLParser::parseQueryNameAndValue):
* Source/WTF/wtf/URLParser.h:
* Tools/TestWebKitAPI/Tests/WTF/URL.cpp:

Augment an existing API test to exercise this change.

(TestWebKitAPI::TEST_F):

Canonical link: https://commits.webkit.org/256078@main